--- a/reactchess/practicechesscode.html
+++ b/reactchess/practicechesscode.html
@@ -81,31 +81,43 @@
       const [isWhiteTurn, setIsWhiteTurn] = React.useState(true);
       const [gameOver, setGameOver] = React.useState(false);
       const [inCheck, setInCheck] = React.useState(false);
+      const [checkedKingPosition, setCheckedKingPosition] = React.useState(null);
+      const [isTTSEnabled, setIsTTSEnabled] = React.useState(true); // State to manage TTS
 
-      // Function to announce a player's turn using speech synthesis
-      const announceTurn = (player) => {
-        const utterance = new SpeechSynthesisUtterance(`${player}'s turn`);
-        window.speechSynthesis.speak(utterance);
-      };
+      // Function to toggle TTS on or off
+      function toggleTTS() {
+        setIsTTSEnabled(!isTTSEnabled);
+      }
+
+      // Function to announce the current player's turn using speech synthesis
+      function announceTurn(player) {
+        if (isTTSEnabled) {
+          const utterance = new SpeechSynthesisUtterance(`${player}'s turn`);
+          window.speechSynthesis.speak(utterance);
+        }
+      }
 
       // Function to announce when a king is in check
-      const announceCheck = (player) => {
-        const utterance = new SpeechSynthesisUtterance(`${player} King is in check!`);
-        window.speechSynthesis.speak(utterance);
-      };
+      function announceCheck(player) {
+        if (isTTSEnabled) {
+          const utterance = new SpeechSynthesisUtterance(`${player} King is in check!`);
+          window.speechSynthesis.speak(utterance);
+        }
+      }
 
       // Start or restart the game
-      const startRestartGame = () => {
+      function startRestartGame() {
         setGame(initialGameState);
         setSelectedSquare(null);
         setIsWhiteTurn(true);
         setGameOver(false);
         setInCheck(false);
+        setCheckedKingPosition(null);
         announceTurn("White"); // Announce white's turn at the beginning of the game
-      };
+      }
 
       // Handle square click for moving pieces
-      const handleClick = (row, col) => {
+      function handleClick(row, col) {
         if (gameOver) return;
 
         const currentPlayer = isWhiteTurn ? 'White' : 'Black';
@@ -119,6 +131,11 @@
             if (targetPiece === '' || isOpponentPiece(selectedPiece, targetPiece)) {
               const newGame = game.map(row => row.slice());
 
+              if (targetPiece.toLowerCase() === 'k') {
+                setGameOver(true);
+                alert(`Game Over! ${currentPlayer} wins by capturing the King.`);
+              }
+
               if (isValidMove(selectedPiece, selectedRow, selectedCol, row, col, newGame)) {
                 newGame[row][col] = selectedPiece;
                 newGame[selectedRow][selectedCol] = '';
@@ -126,41 +143,46 @@
                 setSelectedSquare(null);
                 setIsWhiteTurn(!isWhiteTurn);
 
+                // Announce the next player's turn after a move
+                const nextPlayer = isWhiteTurn ? "Black" : "White";
+                announceTurn(nextPlayer);
+
                 // Check if the opponent's king is now in check
                 const opponentKingPos = findKing(newGame, isWhiteTurn ? 'k' : 'K');
                 if (isKingInCheck(newGame, opponentKingPos, !isWhiteTurn)) {
                   setInCheck(true);
+                  setCheckedKingPosition(opponentKingPos);
                   announceCheck(isWhiteTurn ? "Black" : "White"); // Announce check for the opponent's king
                   alert(`${currentPlayer} has placed the opponent's King in check!`);
                 } else {
                   setInCheck(false);
+                  setCheckedKingPosition(null);
                 }
-
-                // Announce the next player's turn after a move
-                announceTurn(isWhiteTurn ? "Black" : "White");
               }
             }
             setSelectedSquare(null);
           } else {
-            setSelectedSquare(null);
+            if (game[row][col] && isPlayerPiece(game[row][col], isWhiteTurn)) {
+              setSelectedSquare([row, col]);
+            }
           }
         } else {
           if (game[row][col] && isPlayerPiece(game[row][col], isWhiteTurn)) {
             setSelectedSquare([row, col]);
           }
         }
-      };
+      }
 
-      const isPlayerPiece = (piece, isWhiteTurn) => {
+      function isPlayerPiece(piece, isWhiteTurn) {
         return isWhiteTurn ? piece === piece.toUpperCase() : piece === piece.toLowerCase();
-      };
+      }
 
-      const isOpponentPiece = (piece, target) => {
+      function isOpponentPiece(piece, target) {
         return (piece.toUpperCase() === piece && target.toLowerCase() === target) || 
                (piece.toLowerCase() === piece && target.toUpperCase() === target);
-      };
+      }
 
-      const isValidMove = (piece, startRow, startCol, targetRow, targetCol, newGame) => {
+      function isValidMove(piece, startRow, startCol, targetRow, targetCol, newGame) {
         const rowDiff = targetRow - startRow;
         const colDiff = targetCol - startCol;
 
@@ -180,7 +202,7 @@
             break;
           case 'r':
             if (colDiff === 0 || rowDiff === 0) {
-              return isPathClear(startRow, startCol, targetRow, targetCol, newGame);
+              return !isPathBlocked(startRow, startCol, targetRow, targetCol, newGame);
             }
             break;
           case 'n':
@@ -190,12 +212,12 @@
             break;
           case 'b':
             if (Math.abs(rowDiff) === Math.abs(colDiff)) {
-              return isPathClear(startRow, startCol, targetRow, targetCol, newGame);
+              return !isPathBlocked(startRow, startCol, targetRow, targetCol, newGame);
             }
             break;
           case 'q':
             if (Math.abs(rowDiff) === Math.abs(colDiff) || colDiff === 0 || rowDiff === 0) {
-              return isPathClear(startRow, startCol, targetRow, targetCol, newGame);
+              return !isPathBlocked(startRow, startCol, targetRow, targetCol, newGame);
             }
             break;
           case 'k':
@@ -203,78 +225,86 @@
               return true;
             }
             break;
+          default:
+            break;
         }
         return false;
-      };
+      }
 
-      const isPathClear = (startRow, startCol, targetRow, targetCol, newGame) => {
-        const rowStep = Math.sign(targetRow - startRow);
-        const colStep = Math.sign(targetCol - startCol);
-        let row = startRow + rowStep;
-        let col = startCol + colStep;
+      function isPathBlocked(startRow, startCol, targetRow, targetCol, newGame) {
+        const rowDirection = Math.sign(targetRow - startRow);
+        const colDirection = Math.sign(targetCol - startCol);
+        let currentRow = startRow + rowDirection;
+        let currentCol = startCol + colDirection;
 
-        while (row !== targetRow || col !== targetCol) {
-          if (newGame[row][col] !== '') {
-            return false;
+        while (currentRow !== targetRow || currentCol !== targetCol) {
+          if (newGame[currentRow][currentCol] !== '') {
+            return true;
           }
-          row += rowStep;
-          col += colStep;
+          currentRow += rowDirection;
+          currentCol += colDirection;
         }
-        return true;
-      };
+        return false;
+      }
 
-      const findKing = (game, king) => {
+      function findKing(game, king) {
         for (let row = 0; row < game.length; row++) {
           for (let col = 0; col < game[row].length; col++) {
-            if (game[row][col].toLowerCase() === king) {
+            if (game[row][col] === king) {
               return [row, col];
             }
           }
         }
         return null;
-      };
+      }
 
-      const isKingInCheck = (game, kingPosition, isOpponentTurn) => {
-        const opponentPieces = isOpponentTurn ? ['P', 'R', 'N', 'B', 'Q', 'K'] : ['p', 'r', 'n', 'b', 'q', 'k'];
-        for (const piece of opponentPieces) {
+      function isKingInCheck(game, kingPosition, isWhite) {
+        const enemyPieces = isWhite ? ['r', 'n', 'b', 'q', 'k', 'p'] : ['R', 'N', 'B', 'Q', 'K', 'P'];
+        for (const piece of enemyPieces) {
           for (let row = 0; row < game.length; row++) {
             for (let col = 0; col < game[row].length; col++) {
-              if (game[row][col] === piece && isValidMove(piece, row, col, kingPosition[0], kingPosition[1], game)) {
-                return true;
+              if (game[row][col] === piece) {
+                if (isValidMove(piece, row, col, kingPosition[0], kingPosition[1], game)) {
+                  return true;
+                }
               }
             }
           }
         }
         return false;
-      };
+      }
 
       return (
         <div>
           <div className="turn-info">
-            {gameOver ? 'Game Over!' : `Current Turn: ${isWhiteTurn ? 'White' : 'Black'}`}
-            {inCheck && <span> {isWhiteTurn ? 'Black King is in check!' : 'White King is in check!'}</span>}
+            {gameOver ? "Game Over!" : `${isWhiteTurn ? "White" : "Black"}'s turn`}{inCheck && ` (Check!)`}
           </div>
           <div className="button-container">
-            <button onClick={startRestartGame}>{gameOver ? 'Restart Game' : 'Start/Restart Game'}</button>
+            <button onClick={startRestartGame}>Start/Restart Game</button>
+            <button onClick={toggleTTS}>{isTTSEnabled ? "Disable TTS" : "Enable TTS"}</button>
           </div>
           <div className="board-container">
-            <div style={{ display: 'grid', gridTemplateColumns: 'repeat(8, 80px)' }}>
+            <div style={{ display: 'grid', gridTemplateColumns: 'repeat(8, 60px)', gap: '1px' }}>
               {game.map((row, rowIndex) => 
-                row.map((piece, colIndex) => 
-                  <div 
-                    key={`${rowIndex}-${colIndex}`} 
-                    onClick={() => handleClick(rowIndex, colIndex)} 
-                    style={{ 
-                      width: '80px', height: '80px', 
-                      backgroundColor: (rowIndex + colIndex) % 2 === 0 ? '#eee' : '#ccc', 
-                      display: 'flex', alignItems: 'center', justifyContent: 'center', 
-                      cursor: 'pointer', 
-                      border: selectedSquare && selectedSquare[0] === rowIndex && selectedSquare[1] === colIndex ? '2px solid red' : 'none' 
+                row.map((piece, colIndex) => (
+                  <div
+                    key={`${rowIndex}-${colIndex}`}
+                    onClick={() => handleClick(rowIndex, colIndex)}
+                    style={{
+                      width: '60px',
+                      height: '60px',
+                      display: 'flex',
+                      justifyContent: 'center',
+                      alignItems: 'center',
+                      backgroundColor: (rowIndex + colIndex) % 2 === 0 ? '#eee' : '#aaa',
+                      cursor: 'pointer',
+                      fontSize: '24px',
+                      fontWeight: 'bold',
                     }}
                   >
-                    {piece && <img src={pieceImages[piece]} alt={piece} style={{ width: '70%', height: '70%' }} />}
+                    {piece && <img src={pieceImages[piece]} alt={piece} style={{ width: '50px', height: '50px' }} />}
                   </div>
-                )
+                ))
               )}
             </div>
           </div>
