--- a/reactchess/practice2.html
+++ b/reactchess/practice2.html
@@ -4,45 +4,12 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chess Game with Check Mechanic</title>
+  <title>Chess Game with TTS</title>
   <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/@babel/standalone@7.10.3/babel.min.js" crossorigin></script>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(45deg, #283048, #859398);
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: Arial, sans-serif;
-    }
-
-    #root {
-      background-color: rgba(255, 255, 255, 0.1);
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.5);
-    }
-
-    .turn-info {
-      color: white;
-      font-size: 18px;
-      margin-bottom: 15px;
-      text-align: center;
-    }
-    
-    .button-container {
-      margin-bottom: 15px;
-      text-align: center;
-    }
-
-    .board-container {
-      display: flex;
-      justify-content: center;
-    }
+    /* Styling here */
   </style>
 </head>
 <body>
@@ -75,6 +42,11 @@
       'P': 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg'
     };
 
+    function speak(text) {
+      const utterance = new SpeechSynthesisUtterance(text);
+      window.speechSynthesis.speak(utterance);
+    }
+
     function Game() {
       const [game, setGame] = React.useState(initialGameState);
       const [selectedSquare, setSelectedSquare] = React.useState(null);
@@ -82,30 +54,7 @@
       const [gameOver, setGameOver] = React.useState(false);
       const [inCheck, setInCheck] = React.useState(false);
       const [checkedKingPosition, setCheckedKingPosition] = React.useState(null);
-      const [isTTSEnabled, setIsTTSEnabled] = React.useState(true); // State to manage TTS
 
-      // Function to toggle TTS on or off
-      function toggleTTS() {
-        setIsTTSEnabled(!isTTSEnabled);
-      }
-
-      // Function to announce the current player's turn using speech synthesis
-      function announceTurn(player) {
-        if (isTTSEnabled) {
-          const utterance = new SpeechSynthesisUtterance(`${player}'s turn`);
-          window.speechSynthesis.speak(utterance);
-        }
-      }
-
-      // Function to announce when a king is in check
-      function announceCheck(player) {
-        if (isTTSEnabled) {
-          const utterance = new SpeechSynthesisUtterance(`${player} King is in check!`);
-          window.speechSynthesis.speak(utterance);
-        }
-      }
-
-      // Start or restart the game
       function startRestartGame() {
         setGame(initialGameState);
         setSelectedSquare(null);
@@ -113,10 +62,9 @@
         setGameOver(false);
         setInCheck(false);
         setCheckedKingPosition(null);
-        announceTurn("White"); // Announce white's turn at the beginning of the game
+        speak("Game started. White's turn.");
       }
 
-      // Handle square click for moving pieces
       function handleClick(row, col) {
         if (gameOver) return;
 
@@ -131,11 +79,6 @@
             if (targetPiece === '' || isOpponentPiece(selectedPiece, targetPiece)) {
               const newGame = game.map(row => row.slice());
 
-              if (targetPiece.toLowerCase() === 'k') {
-                setGameOver(true);
-                alert(`Game Over! ${currentPlayer} wins by capturing the King.`);
-              }
-
               if (isValidMove(selectedPiece, selectedRow, selectedCol, row, col, newGame)) {
                 newGame[row][col] = selectedPiece;
                 newGame[selectedRow][selectedCol] = '';
@@ -143,26 +86,24 @@
                 setSelectedSquare(null);
                 setIsWhiteTurn(!isWhiteTurn);
 
-                // Announce the next player's turn after a move
-                const nextPlayer = isWhiteTurn ? "Black" : "White";
-                announceTurn(nextPlayer);
-
-                // Check if the opponent's king is now in check
                 const opponentKingPos = findKing(newGame, isWhiteTurn ? 'k' : 'K');
                 if (isKingInCheck(newGame, opponentKingPos, !isWhiteTurn)) {
                   setInCheck(true);
                   setCheckedKingPosition(opponentKingPos);
-                  announceCheck(isWhiteTurn ? "Black" : "White"); // Announce check for the opponent's king
-                  alert(`${currentPlayer} has placed the opponent's King in check!`);
+
+                  if (isCheckmate(newGame, !isWhiteTurn)) {
+                    setGameOver(true);
+                    speak(`Checkmate! ${currentPlayer} wins!`);
+                    alert(`Checkmate! ${currentPlayer} wins!`);
+                  } else {
+                    speak(`${currentPlayer} has placed the opponent's King in check.`);
+                    alert(`${currentPlayer} has placed the opponent's King in check!`);
+                  }
                 } else {
                   setInCheck(false);
                   setCheckedKingPosition(null);
                 }
-              } else {
-                setSelectedSquare(null);
               }
-            } else {
-              setSelectedSquare(null);
             }
           } else {
             setSelectedSquare(null);
@@ -191,22 +132,13 @@
           case 'p':
             const direction = isWhiteTurn ? -1 : 1;
             const startRowForPawn = isWhiteTurn ? 6 : 1;
-            if (colDiff === 0 && rowDiff === direction && newGame[targetRow][targetCol] === '') {
-              return true;
-            }
-            if (colDiff === 0 && rowDiff === 2 * direction && startRow === startRowForPawn && newGame[targetRow][targetCol] === '' && newGame[startRow + direction][startCol] === '') {
-              return true;
-            }
-            if (Math.abs(colDiff) === 1 && rowDiff === direction && newGame[targetRow][targetCol] !== '' && isOpponentPiece(piece, newGame[targetRow][targetCol])) {
-              return true;
-            }
+            if (colDiff === 0 && rowDiff === direction && newGame[targetRow][targetCol] === '') return true;
+            if (colDiff === 0 && rowDiff === 2 * direction && startRow === startRowForPawn && newGame[startRow + direction][startCol] === '') return true;
+            if (Math.abs(colDiff) === 1 && rowDiff === direction && newGame[targetRow][targetCol] !== '') return true;
             return false;
 
           case 'r':
-            if (colDiff === 0 || rowDiff === 0) {
-              return !isPathBlocked(startRow, startCol, targetRow, targetCol);
-            }
-            return false;
+            return (colDiff === 0 || rowDiff === 0) && !isPathBlocked(startRow, startCol, targetRow, targetCol);
 
           case 'n':
             return (Math.abs(rowDiff) === 2 && Math.abs(colDiff) === 1) || (Math.abs(rowDiff) === 1 && Math.abs(colDiff) === 2);
@@ -215,10 +147,7 @@
             return Math.abs(rowDiff) === Math.abs(colDiff) && !isPathBlocked(startRow, startCol, targetRow, targetCol);
 
           case 'q':
-            if (colDiff === 0 || rowDiff === 0 || Math.abs(rowDiff) === Math.abs(colDiff)) {
-              return !isPathBlocked(startRow, startCol, targetRow, targetCol);
-            }
-            return false;
+            return (Math.abs(rowDiff) === Math.abs(colDiff) || colDiff === 0 || rowDiff === 0) && !isPathBlocked(startRow, startCol, targetRow, targetCol);
 
           case 'k':
             return Math.abs(rowDiff) <= 1 && Math.abs(colDiff) <= 1;
@@ -233,6 +162,7 @@
         const colStep = targetCol > startCol ? 1 : targetCol < startCol ? -1 : 0;
         let row = startRow + rowStep;
         let col = startCol + colStep;
+
         while (row !== targetRow || col !== targetCol) {
           if (game[row][col] !== '') return true;
           row += rowStep;
@@ -241,91 +171,72 @@
         return false;
       }
 
-      function findKing(newGame, king) {
-        for (let row = 0; row < newGame.length; row++) {
-          for (let col = 0; col < newGame[row].length; col++) {
-            if (newGame[row][col] === king) {
-              return [row, col];
-            }
+      function findKing(game, king) {
+        for (let row = 0; row < 8; row++) {
+          for (let col = 0; col < 8; col++) {
+            if (game[row][col] === king) return [row, col];
           }
         }
         return null;
       }
 
-      function isKingInCheck(newGame, kingPosition, isWhiteTurn) {
-        const opponentMoves = [];
-        for (let row = 0; row < newGame.length; row++) {
-          for (let col = 0; col < newGame[row].length; col++) {
-            const piece = newGame[row][col];
-            if (piece !== '' && isPlayerPiece(piece, !isWhiteTurn)) {
-              for (let targetRow = 0; targetRow < newGame.length; targetRow++) {
-                for (let targetCol = 0; targetCol < newGame[targetRow].length; targetCol++) {
-                  if (isValidMove(piece, row, col, targetRow, targetCol, newGame)) {
-                    opponentMoves.push([targetRow, targetCol]);
+      function isKingInCheck(game, kingPosition, isWhiteTurn) {
+        if (!kingPosition) return false;
+        const [kingRow, kingCol] = kingPosition;
+        for (let row = 0; row < 8; row++) {
+          for (let col = 0; col < 8; col++) {
+            const piece = game[row][col];
+            if (piece && isPlayerPiece(piece, !isWhiteTurn) && isValidMove(piece, row, col, kingRow, kingCol, game)) {
+              return true;
+            }
+          }
+        }
+        return false;
+      }
+
+      function isCheckmate(game, isWhiteTurn) {
+        for (let row = 0; row < 8; row++) {
+          for (let col = 0; col < 8; col++) {
+            const piece = game[row][col];
+            if (piece && isPlayerPiece(piece, isWhiteTurn)) {
+              for (let targetRow = 0; targetRow < 8; targetRow++) {
+                for (let targetCol = 0; targetCol < 8; targetCol++) {
+                  if (isValidMove(piece, row, col, targetRow, targetCol, game)) {
+                    const tempGame = game.map(row => row.slice());
+                    tempGame[targetRow][targetCol] = piece;
+                    tempGame[row][col] = '';
+                    const kingPosition = findKing(tempGame, isWhiteTurn ? 'K' : 'k');
+                    if (!isKingInCheck(tempGame, kingPosition, isWhiteTurn)) {
+                      return false;
+                    }
                   }
                 }
               }
             }
           }
         }
-        return opponentMoves.some(([r, c]) => r === kingPosition[0] && c === kingPosition[1]);
+        return true;
       }
 
       return (
         <div>
-          <div className="turn-info">
-            {gameOver ? "Game Over!" : `Current Turn: ${isWhiteTurn ? 'White' : 'Black'}`}
-          </div>
-          <div className="button-container">
-            <button onClick={startRestartGame}>{gameOver ? 'Restart Game' : 'Start/Restart Game'}</button>
-            <button onClick={toggleTTS}>{isTTSEnabled ? 'Disable TTS' : 'Enable TTS'}</button> {/* TTS toggle button */}
-          </div>
-          <div className="board-container">
-            <Board game={game} selectedSquare={selectedSquare} onClick={handleClick} />
+          <button onClick={startRestartGame}>Start/Restart Game</button>
+          <div style={{ display: 'grid', gridTemplateColumns: 'repeat(8, 50px)', gridTemplateRows: 'repeat(8, 50px)' }}>
+            {game.map((row, rowIndex) => (
+              row.map((piece, colIndex) => (
+                <div key={`${rowIndex}-${colIndex}`} onClick={() => handleClick(rowIndex, colIndex)}
+                  style={{ width: 50, height: 50, display: 'flex', alignItems: 'center', justifyContent: 'center',
+                           backgroundColor: (rowIndex + colIndex) % 2 === 0 ? 'white' : 'gray' }}>
+                  {piece && <img src={pieceImages[piece]} alt={piece} style={{ width: '100%' }} />}
+                </div>
+              ))
+            ))}
           </div>
         </div>
       );
     }
 
-    function Board({ game, selectedSquare, onClick }) {
-      return (
-        <div style={{ display: 'grid', gridTemplateColumns: 'repeat(8, 60px)', gridGap: 0 }}>
-          {game.map((row, rowIndex) =>
-            row.map((square, colIndex) => (
-              <Square
-                key={`${rowIndex}-${colIndex}`}
-                piece={square}
-                selected={selectedSquare && selectedSquare[0] === rowIndex && selectedSquare[1] === colIndex}
-                onClick={() => onClick(rowIndex, colIndex)}
-              />
-            ))
-          )}
-        </div>
-      );
-    }
-
-    function Square({ piece, selected, onClick }) {
-      const backgroundColor = selected ? '#a9d7ff' : (piece !== '' ? '#f0d9b5' : '#b58863');
-      return (
-        <div
-          onClick={onClick}
-          style={{
-            width: '60px',
-            height: '60px',
-            backgroundColor,
-            display: 'flex',
-            justifyContent: 'center',
-            alignItems: 'center',
-            cursor: 'pointer',
-            border: '1px solid #000',
-          }}
-        >
-          {piece && <img src={pieceImages[piece]} alt={piece} style={{ width: '50px', height: '50px' }} />}
-        </div>
-      );
-    }
-
-    ReactDOM.render(<Game />, document.getElementById('root'));
+    ReactDOM.createRoot(document.getElementById('root')).render(<Game />);
   </script>
 </body>
 </html>
