--- a/reactchess/practice2.html
+++ b/reactchess/practice2.html
@@ -9,7 +9,40 @@
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/@babel/standalone@7.10.3/babel.min.js" crossorigin></script>
   <style>
-    /* Styling here */
+    body {
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(45deg, #283048, #859398);
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: Arial, sans-serif;
+    }
+
+    #root {
+      background-color: rgba(255, 255, 255, 0.1);
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.5);
+    }
+
+    .turn-info {
+      color: white;
+      font-size: 18px;
+      margin-bottom: 15px;
+      text-align: center;
+    }
+    
+    .button-container {
+      margin-bottom: 15px;
+      text-align: center;
+    }
+
+    .board-container {
+      display: flex;
+      justify-content: center;
+    }
   </style>
 </head>
 <body>
@@ -53,7 +86,6 @@
       const [isWhiteTurn, setIsWhiteTurn] = React.useState(true);
       const [gameOver, setGameOver] = React.useState(false);
       const [inCheck, setInCheck] = React.useState(false);
-      const [checkedKingPosition, setCheckedKingPosition] = React.useState(null);
 
       function startRestartGame() {
         setGame(initialGameState);
@@ -61,7 +93,6 @@
         setIsWhiteTurn(true);
         setGameOver(false);
         setInCheck(false);
-        setCheckedKingPosition(null);
         speak("Game started. White's turn.");
       }
 
@@ -79,6 +110,12 @@
             if (targetPiece === '' || isOpponentPiece(selectedPiece, targetPiece)) {
               const newGame = game.map(row => row.slice());
 
+              if (targetPiece.toLowerCase() === 'k') {
+                setGameOver(true);
+                speak(`Game Over! ${currentPlayer} wins by capturing the King.`);
+                alert(`Game Over! ${currentPlayer} wins by capturing the King.`);
+              }
+
               if (isValidMove(selectedPiece, selectedRow, selectedCol, row, col, newGame)) {
                 newGame[row][col] = selectedPiece;
                 newGame[selectedRow][selectedCol] = '';
@@ -88,22 +125,22 @@
 
                 const opponentKingPos = findKing(newGame, isWhiteTurn ? 'k' : 'K');
                 if (isKingInCheck(newGame, opponentKingPos, !isWhiteTurn)) {
-                  setInCheck(true);
-                  setCheckedKingPosition(opponentKingPos);
-
                   if (isCheckmate(newGame, !isWhiteTurn)) {
                     setGameOver(true);
-                    speak(`Checkmate! ${currentPlayer} wins!`);
-                    alert(`Checkmate! ${currentPlayer} wins!`);
+                    speak(`Checkmate! ${currentPlayer} wins.`);
+                    alert(`Checkmate! ${currentPlayer} wins.`);
                   } else {
+                    setInCheck(true);
                     speak(`${currentPlayer} has placed the opponent's King in check.`);
-                    alert(`${currentPlayer} has placed the opponent's King in check!`);
                   }
                 } else {
                   setInCheck(false);
-                  setCheckedKingPosition(null);
                 }
+              } else {
+                setSelectedSquare(null);
               }
+            } else {
+              setSelectedSquare(null);
             }
           } else {
             setSelectedSquare(null);
@@ -115,98 +152,19 @@
         }
       }
 
-      function isPlayerPiece(piece, isWhiteTurn) {
-        return isWhiteTurn ? piece === piece.toUpperCase() : piece === piece.toLowerCase();
-      }
-
-      function isOpponentPiece(piece, target) {
-        return (piece.toUpperCase() === piece && target.toLowerCase() === target) || 
-               (piece.toLowerCase() === piece && target.toUpperCase() === target);
-      }
-
-      function isValidMove(piece, startRow, startCol, targetRow, targetCol, newGame) {
-        const rowDiff = targetRow - startRow;
-        const colDiff = targetCol - startCol;
-
-        switch (piece.toLowerCase()) {
-          case 'p':
-            const direction = isWhiteTurn ? -1 : 1;
-            const startRowForPawn = isWhiteTurn ? 6 : 1;
-            if (colDiff === 0 && rowDiff === direction && newGame[targetRow][targetCol] === '') return true;
-            if (colDiff === 0 && rowDiff === 2 * direction && startRow === startRowForPawn && newGame[startRow + direction][startCol] === '') return true;
-            if (Math.abs(colDiff) === 1 && rowDiff === direction && newGame[targetRow][targetCol] !== '') return true;
-            return false;
-
-          case 'r':
-            return (colDiff === 0 || rowDiff === 0) && !isPathBlocked(startRow, startCol, targetRow, targetCol);
-
-          case 'n':
-            return (Math.abs(rowDiff) === 2 && Math.abs(colDiff) === 1) || (Math.abs(rowDiff) === 1 && Math.abs(colDiff) === 2);
-
-          case 'b':
-            return Math.abs(rowDiff) === Math.abs(colDiff) && !isPathBlocked(startRow, startCol, targetRow, targetCol);
-
-          case 'q':
-            return (Math.abs(rowDiff) === Math.abs(colDiff) || colDiff === 0 || rowDiff === 0) && !isPathBlocked(startRow, startCol, targetRow, targetCol);
-
-          case 'k':
-            return Math.abs(rowDiff) <= 1 && Math.abs(colDiff) <= 1;
-
-          default:
-            return false;
-        }
-      }
-
-      function isPathBlocked(startRow, startCol, targetRow, targetCol) {
-        const rowStep = targetRow > startRow ? 1 : targetRow < startRow ? -1 : 0;
-        const colStep = targetCol > startCol ? 1 : targetCol < startCol ? -1 : 0;
-        let row = startRow + rowStep;
-        let col = startCol + colStep;
-
-        while (row !== targetRow || col !== targetCol) {
-          if (game[row][col] !== '') return true;
-          row += rowStep;
-          col += colStep;
-        }
-        return false;
-      }
-
-      function findKing(game, king) {
-        for (let row = 0; row < 8; row++) {
-          for (let col = 0; col < 8; col++) {
-            if (game[row][col] === king) return [row, col];
-          }
-        }
-        return null;
-      }
-
-      function isKingInCheck(game, kingPosition, isWhiteTurn) {
-        if (!kingPosition) return false;
-        const [kingRow, kingCol] = kingPosition;
+      function isCheckmate(game, isWhiteKing) {
+        const kingPos = findKing(game, isWhiteKing ? 'K' : 'k');
         for (let row = 0; row < 8; row++) {
           for (let col = 0; col < 8; col++) {
             const piece = game[row][col];
-            if (piece && isPlayerPiece(piece, !isWhiteTurn) && isValidMove(piece, row, col, kingRow, kingCol, game)) {
-              return true;
-            }
-          }
-        }
-        return false;
-      }
-
-      function isCheckmate(game, isWhiteTurn) {
-        for (let row = 0; row < 8; row++) {
-          for (let col = 0; col < 8; col++) {
-            const piece = game[row][col];
-            if (piece && isPlayerPiece(piece, isWhiteTurn)) {
+            if (piece && isPlayerPiece(piece, isWhiteKing)) {
               for (let targetRow = 0; targetRow < 8; targetRow++) {
                 for (let targetCol = 0; targetCol < 8; targetCol++) {
                   if (isValidMove(piece, row, col, targetRow, targetCol, game)) {
                     const tempGame = game.map(row => row.slice());
                     tempGame[targetRow][targetCol] = piece;
                     tempGame[row][col] = '';
-                    const kingPosition = findKing(tempGame, isWhiteTurn ? 'K' : 'k');
-                    if (!isKingInCheck(tempGame, kingPosition, isWhiteTurn)) {
+                    if (!isKingInCheck(tempGame, kingPos, isWhiteKing)) {
                       return false;
                     }
                   }
@@ -220,18 +178,56 @@
 
       return (
         <div>
-          <button onClick={startRestartGame}>Start/Restart Game</button>
-          <div style={{ display: 'grid', gridTemplateColumns: 'repeat(8, 50px)', gridTemplateRows: 'repeat(8, 50px)' }}>
-            {game.map((row, rowIndex) => (
-              row.map((piece, colIndex) => (
-                <div key={`${rowIndex}-${colIndex}`} onClick={() => handleClick(rowIndex, colIndex)}
-                  style={{ width: 50, height: 50, display: 'flex', alignItems: 'center', justifyContent: 'center',
-                           backgroundColor: (rowIndex + colIndex) % 2 === 0 ? 'white' : 'gray' }}>
-                  {piece && <img src={pieceImages[piece]} alt={piece} style={{ width: '100%' }} />}
-                </div>
-              ))
-            ))}
+          <div className="button-container">
+            <button onClick={startRestartGame}>{gameOver ? "Start Game" : "Start/Restart Game"}</button>
           </div>
+          <h2 className="turn-info">{isWhiteTurn ? "White's Turn" : "Black's Turn"}</h2>
+          {inCheck && <h2 style={{ color: 'red', textAlign: 'center' }}>Check!</h2>}
+          <div className="board-container">
+            <Board game={game} onSquareClick={handleClick} selectedSquare={selectedSquare} />
+          </div>
+          {gameOver && <h2 style={{ color: 'red', textAlign: 'center' }}>Game Over</h2>}
+        </div>
+      );
+    }
+
+    function Board({ game, onSquareClick, selectedSquare }) {
+      return (
+        <div>
+          {game.map((row, rowIndex) => (
+            <div key={rowIndex} style={{ display: 'flex' }}>
+              {row.map((value, colIndex) => (
+                <Square
+                  key={colIndex}
+                  value={value}
+                  onClick={() => onSquareClick(rowIndex, colIndex)}
+                  isSelected={selectedSquare && selectedSquare[0] === rowIndex && selectedSquare[1] === colIndex}
+                />
+              ))}
+            </div>
+          ))}
+        </div>
+      );
+    }
+
+    function Square({ value, onClick, isSelected }) {
+      return (
+        <div
+          onClick={onClick}
+          style={{
+            width: 60,
+            height: 60,
+            display: 'flex',
+            justifyContent: 'center',
+            alignItems: 'center',
+            backgroundColor: isSelected ? 'orange' : 'white',
+            color: 'black',
+            fontSize: '24px',
+            cursor: 'pointer',
+            border: '1px solid #333',
+          }}
+        >
+          {value && <img src={pieceImages[value]} alt={value} style={{ width: '100%', height: '100%' }} />}
         </div>
       );
     }
